--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="_18">18+</string>
     <string name="release_date">Release date</string>
     <string name="overview">Overview</string>
+    <string name="backdrop">backdrop</string>
+    <string name="duration">Duration</string>
+    <string name="name">Name</string>
+    <string name="casts">Casts</string>
 </resources>
