--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="movies">Movies</string>
     <string name="tv_shows">TV Shows</string>
     <string name="favorites">Favorites</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title">Title</string>
     <string name="now_playing">Now Playing</string>
@@ -25,4 +25,6 @@
     <string name="duration">Duration</string>
     <string name="name">Name</string>
     <string name="casts">Casts</string>
+    <string name="refresh">refresh</string>
+    <string name="belum_ada_film_atau_series_favorite">Belum ada film atau series favorite~</string>
 </resources>
