--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MovieHub</string>
+    <string name="app_name">H071211017 - Fitrah Ramadhan</string>
     <string name="movies">Movies</string>
     <string name="tv_shows">TV Shows</string>
     <string name="favorites">Favorites</string>
@@ -27,4 +27,5 @@
     <string name="casts">Casts</string>
     <string name="refresh">refresh</string>
     <string name="belum_ada_film_atau_series_favorite">Belum ada film atau series favorite~</string>
+    <string name="hasil_pencarian_tidak_ada">Hasil pencarian tidak ada!</string>
 </resources>
